<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNotes">

    <Button
        android:id="@+id/button3"
        android:layout_width="104dp"
        android:layout_height="59dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck"
        tools:text="@string/save" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/edit_heading"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="528dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/edit_content_here"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>