<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="?attr/editTextBackground"
            android:backgroundTint="@android:color/black"
            android:backgroundTintMode="add"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/write_heading"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@id/editTextTextPersonName4"
            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="528dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/write_content_here"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>